# Academic-Issue-Tracking-System-AITS-

./: .gitignore  App.css  App.jsx  README.md  db.sqlite3  index.css  index.html  index.js  index.tsx  package-lock.json  package.json  render.yaml  requirements.txt  vite.config.js
aits/: .gitignore
backend/: .gitignore  pyproject.toml  render.yaml  requirements.txt
backend/aits/: exception_handler.py  settings.py  urls.py
backend/issues/: admin.py  apps.py  decorators.py  exceptions.py  forms.py  models(2).py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/issues/issue_documents/: Requirements_Modelling_Tutorial.docx
backend/issues/migrations/: 0001_initial.py  0003_alter_issue_lecturer.py  0005_customuser_requires_profile_setup_and_more.py  0006_alter_customuser_email.py  0008_issue_title_issue_user.py  0009_rename_user_issue_owner.py  0010_notification.py  0011_issue_assigned_to.py  0012_issue_status.py  0013_remove_issue_lecturer.py  0014_issue_lecturer.py
backend/issues/templates/email_templates/: issue_status_update.html
backend/tracker/: db.sqlite3  render.yaml  settings.py  urls.py  wsgi.py
backend/tracker/issues/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/tracker/issues/migrations/: 0001_initial.py  0002_remove_issue_assigned_to_remove_issue_created_at_and_more.py  0004_alter_issue_lecturer.py  0007_remove_lecturer_user_remove_student_user_and_more.py
backend/tracker/tracker/: settings.py
backend/tracker/tracking/: asgi.py  settings.py  urls.py
src/: App.css  (+2 more)
(+130 files in other folders)
