[tool.poetry]
name = "academic-issue-tracker"
version = "0.1.0"
description = "Makerere University Academic Issue Tracking System"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
djangorestframework = "^3.14"
django-cors-headers = "^4.2"
gunicorn = "^21.2"
whitenoise = "^6.5"
# Add other dependencies from your project

[tool.poetry.group.dev.dependencies]
black = "^23.7"
flake8 = "^6.0"
# Add other dev dependencies

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"